The remainder were:

**** Functions `calendar-one-frame-setup', `calendar-only-one-frame-setup',
`calendar-two-frame-setup', `european-calendar', `american-calendar'.

**** Hooks `cal-menu-load-hook', `cal-x-load-hook'.

**** Macro `calendar-for-loop'.

**** Variables `european-calendar-style', `diary-face', `hebrew-holidays-{1,4}'.

** New ERT function `ert-summarize-tests-batch-and-exit'.

---
** ntlm.el has support for NTLM2.

---
** The Rmail commands d, C-d and u now handle repeat counts to delete or
undelete multiple messages.

** Rmail can now render HTML mail messages if your Emacs was built with
libxml2 or if you have the Lynx browser installed.  By default, Rmail
will display the HTML version of a mail message that has both HTML and
plain text parts, if display of HTML email is possible; customize the
`rmail-mime-prefer-html' option to `nil' if you don't want that.

** SES now supports local printer functions; see `ses-define-local-printer'.

** In sh-mode, you can now use `sh-shell' as a file-local variable to
specify the type of shell in use (bash, csh, etc).

** The URL package accepts now the protocols "ssh", "scp" and "rsync".
When `url-handler-mode' is enabled, file operations for these
protocols as well as for "telnet" and "ftp" are passed to Tramp.

** Tramp

*** New connection method "nc", which allows to access dumb busyboxes.

** SQL mode

*** New user variable `sql-default-directory' enables remote
connections using Tramp.

*** New command `sql-send-line-and-next' sends the current line to the
interactive buffer and advances to the next line, skipping whitespace
and comments.

*** Add support for Vertica SQL.

** VC and related modes

*** New option `vc-annotate-background-mode' controls whether
the color range from `vc-annotate-color-map' is applied to the
background or to the foreground.

** Calculator: decimal display mode uses "," groups, so it's more
fitting for use in money calculations; factorial works with
non-integer inputs.
