@@ -138,10 +138,14 @@ The Lisp code is executed when the node is selected.")
   :type 'boolean
   :group 'info)
 
+;; It's unfortunate that nil means no fontification, as opposed to no limit,
+;; since that differs from font-lock-maximum-size.
 (defcustom Info-fontify-maximum-menu-size 400000
   "Maximum size of menu to fontify if `font-lock-mode' is non-nil.
-Set to nil to disable node fontification."
-  :type 'integer
+Set to nil to disable node fontification; set to t for no limit."
+  :type '(choice (const :tag "No fontification" nil)
+		 (const :tag "No size limit" t)
+		 (integer :tag "Up to this many characters"))
   :version "25.1"			; 100k -> 400k
   :group 'info)
 
@@ -4606,7 +4610,9 @@ first line or header line, and for breadcrumb links.")
             (and Info-fontify-visited-nodes
                  ;; Don't take time to refontify visited nodes in huge nodes
 		 Info-fontify-maximum-menu-size
-                 (< (- (point-max) (point-min)) Info-fontify-maximum-menu-size)))
+                 (or (eq Info-fontify-maximum-menu-size t)
+		     (< (- (point-max) (point-min))
+			Info-fontify-maximum-menu-size))))
            rbeg rend)
 
       ;; Fontify header line
@@ -4863,7 +4869,9 @@ first line or header line, and for breadcrumb links.")
                  (search-forward "\n* Menu:" nil t)
                  ;; Don't take time to annotate huge menus
 		 Info-fontify-maximum-menu-size
-                 (< (- (point-max) (point)) Info-fontify-maximum-menu-size))
+		 (or (eq Info-fontify-maximum-menu-size t)
+		     (< (- (point-max) (point))
+			Info-fontify-maximum-menu-size)))
         (let ((n 0)
               cont)
           (while (re-search-forward
